--- a/presentation/src/main/res/layout/activity_main_fun.xml
+++ b/presentation/src/main/res/layout/activity_main_fun.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.activity.MainFunActivity">
 
+    <fragment
+        android:id="@+id/nav_find_password"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/main_nav" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
