--- a/presentation/src/main/res/layout/fragment_choose_tree_end.xml
+++ b/presentation/src/main/res/layout/fragment_choose_tree_end.xml
@@ -6,6 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="fragment"
+            type="com.kdn.presentation.ui.setting.fragment.ChooseTreeEndFragment" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -45,6 +53,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="200dp"
+            android:onClick="@{fragment.goMain}"
             android:layout_height="wrap_content"
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="64dp"
